# mlops-cifar-10

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: config.yaml
mlops_cifar_10/: check.py  infer.py  train.py
