[tool.poetry]
name = "mlops-cifar-10"
version = "0.1.0"
description = ""
authors = ["A.Sidorova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
torch = "^2.1.2"
scikit-learn = "^1.3.2"
torchvision = "^0.16.2"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
urllib3 = "1.26.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^23.12.1"
dvc = "^3.38.1"
dvc-gdrive = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
